Fix navbar padding and hide logo on smaller screens

--- a/src/components/navbar/Navbar.module.scss
+++ b/src/components/navbar/Navbar.module.scss
@@ -98,10 +98,10 @@
 
 @media (max-width: $breakpoint-md) {
   .navbar {
-    padding: 1rem 5rem;
+    padding: 1rem 2rem;
   }
 
-  .right {
+  .left {
     display: none;
   }
 }
